adding data attributes
adding data attributes

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <header>Tic, Tac , Toe !</header>
 <body>
     <div class="container">
-<div class="emptyCell"></div>
-<div class="emptyCell"></div>
-<div class="emptyCell"></div>
-<div class="emptyCell"></div>
-<div class="emptyCell"></div>
-<div class="emptyCell"></div>
-<div class="emptyCell"></div>
-<div class="emptyCell"></div>
-<div class="emptyCell"></div>
+<div class="emptyCell" data-key="0"></div>
+<div class="emptyCell" data-key="1"></div>
+<div class="emptyCell" data-key="3"></div>
+<div class="emptyCell" data-key="4"></div>
+<div class="emptyCell" data-key="5"></div>
+<div class="emptyCell" data-key="6"></div>
+<div class="emptyCell" data-key="7"></div>
+<div class="emptyCell" data-key="8"></div>
+<div class="emptyCell" data-key="9"></div>
 
     </div>
 
