--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Borel&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
-<header>Tic, Tac , Toe !</header>
+<header><h1>Tic, Tac , Toe !</h1></header>
 <body>
     <div class="container">
 <div class="emptyCell" data-key="0"></div>
 <div class="emptyCell" data-key="1"></div>
+<div class="emptyCell" data-key="2"></div>
 <div class="emptyCell" data-key="3"></div>
 <div class="emptyCell" data-key="4"></div>
 <div class="emptyCell" data-key="5"></div>
 <div class="emptyCell" data-key="6"></div>
 <div class="emptyCell" data-key="7"></div>
 <div class="emptyCell" data-key="8"></div>
-<div class="emptyCell" data-key="9"></div>
 
     </div>
 
     <script src="./script.js" defer></script>
 </body>
+<footer><h2 class="player-turn">Player X turn</h2></header></footer>
 </html>
